[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake>=3.22",
    "pybind11>=2.10.0",
    "numpy>=1.17",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python {project}/tests/test_scene.py"
test-skip = "*universal2:arm64"